js/js.translator/testData/incremental/invalidation/moveInlineFunctionBetweenModules/lib1/l1.1.kt
inline fun foo(a: Int) = a * 3
